--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: go
 go:
-    - 1.1
-    - 1.2
-    - 1.3
-    - release
-    - tip
+    - 1.x
+    - 1.6
+    - 1.7
+    - master
 script:
     - cd tests && make
